<resources>
    <string name="app_name">红绳</string>
    <string name="app_need_location">没有权限，无法为连接您的TA</string>
    <string name="app_see_you">见Ta</string>
    <string name="app_go_back">备份ID</string>
    <string name="app_settings_wallpaper">设置壁纸</string>
    <string name="app_pay">打赏</string>
    <string name="app_about">关于</string>
    <string name="app_login">登录</string>
    <string name="app_login_err">登录失败</string>
    <string name="app_register">注册</string>
    <string name="app_register_success">注册成功</string>
    <string name="app_register_err">注册失败</string>
    <string name="app_link">绑定</string>
    <string name="app_link_her">与TA绑定</string>
    <string name="app_link_tips">当前ID:%s\n(绑定成功后, 对方需重启程序)</string>
    <string name="app_link_success">和Ta绑定成功，设置动态壁纸吧</string>
    <string name="app_link_err">绑定失败, 请检查ID</string>
    <string name="app_her_not_alone">抱歉！名花有主</string>
    <string name="app_send_to_her">发送当前ID给TA</string>
    <string name="app_input_you_id">请输入您的ID</string>
    <string name="app_input_her_id">请输入要绑定的ID</string>
    <string name="app_input_right_id">请输入正确ID</string>
    <string name="app_input_not_allow_myself">无法绑定自己的ID</string>
    <string name="app_pull_err">抱歉,未找到Ta</string>
    <string name="app_nav_drive_err">不知哪里出了问题...</string>
    <string name="app_nav_work_err">可能太远了, 要不换个交通工具?</string>
    <string name="app_nav_ride_err">也许不适合骑车,算了吧...</string>
</resources>
