<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="her"
            type="com.song.redcord.bean.Her" />
    </data>

    <android.support.v7.widget.CardView
        android:id="@+id/expand_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardCornerRadius="8dp"
        tools:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/expand_name"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/avatar_bg"
                android:ellipsize="end"
                android:gravity="center"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="1"
                android:singleLine="true"
                android:text="@{her.name}"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="italic|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ta" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:text='@{her.address == null ? "定位中..." : her.address}'
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expand_name"
                app:layout_constraintTop_toTopOf="@+id/expand_name"
                tools:text="甘肃省" />

            <TextView
                style="@style/TextSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="2dp"
                android:text='@{"经纬度: "+ her.location.getLatitude() + " | " + her.location.getLongitude()}'
                app:layout_constraintBottom_toBottomOf="@+id/expand_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/expand_name"
                tools:text="经纬度" />

            <TextView
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:lineSpacingMultiplier="1.5"
                android:text='@{her.driveInfo == null ? "探路中..." : ("距离: " + her.lineDistance+ "\n驾车: " + her.driveInfo+ "\n骑行: " + her.rideInfo + "\n步行: " + her.workInfo  )}'
                app:layout_constraintBottom_toTopOf="@+id/btn_0"
                app:layout_constraintStart_toStartOf="@+id/expand_name"
                app:layout_constraintTop_toBottomOf="@+id/expand_name"
                tools:text="直线距离" />

            <TextView
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@color/colorBlue"
                android:gravity="center"
                android:onClick="@{her::onNavClick}"
                android:text="@string/app_see_you"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_2"
                app:layout_constraintEnd_toStartOf="@+id/btn_1"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="@{her::onSetWallpaperClick}"
                android:text="@string/app_settings_wallpaper"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_0" />

            <TextView
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@color/colorGreen"
                android:gravity="center"
                android:onClick="@{her::onForbackClick}"
                android:text="@string/app_go_back"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_3"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="@{her::onPayClick}"
                android:text="@string/app_pay"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_4"
                app:layout_constraintStart_toEndOf="@+id/btn_2" />

            <TextView
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:background="@color/colorPurple"
                android:gravity="center"
                android:onClick="@{her::onAboutClick}"
                android:text="@string/app_about"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_3" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</layout>